<resources>
    <string name="app_name">Bmail App</string>
    <string name="logo_desc">Bmail logo</string>
    <string name="app_welcome_message">Welcome to Bmail!</string>
    <string name="app_subtitle">Secure, smart and easy-to-use email</string>
    <string name="app_description">Show everyone how to do it better.</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="show_password">Show</string>
    <string name="register_prompt">Don’t have an account? Register</string>
    <string name="signupTitle">Create a new account</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="birthDate">Birth date</string>
    <string name="genderLabel">Gender</string>
    <string name="radio_female">Female</string>
    <string name="radio_male">Male</string>
    <string name="radio_other">Other</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="uploadProfileImage">Upload profile image</string>
    <string name="signupBtn">Sign up</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="login_failed">Login failed</string>
    <string name="server_error_with_message">Server error: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="error_fill_all_fields">Please fill in all fields</string>
    <string name="error_password_match">The passwords do not match</string>
    <string name="error_username_exists">Username already exists</string>
    <string name="error_registration_failed">Registration failed</string>
    <string name="profile_image_description">Profile image preview</string>
    <string name="hint_to">To</string>
    <string name="hint_subject">Subject</string>
    <string name="hint_message">Message</string>
    <string name="send">Send</string>
    <string name="close_button_desc">Close</string>
    <string name="compose_title">Create New Mail</string>
    <string name="draft">Draft</string>
    <string name="sent">Sent</string>
    <string name="important">Important</string>
    <string name="starred">Starred</string>
    <string name="inbox">Inbox</string>
    <string name="spam">Spam</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="no_search_results_found">No results found</string>
    <string name="unknown_sender">(Unknown Sender)</string>
    <string name="no_subject">(No Subject)</string>
    <string name="no_content_message">(No Content)</string>
    <string name="star">Star</string>
    <string name="delete">Delete</string>
    <string name="label">Label</string>
    <string name="date_example">2025–07–16 10:45</string>
    <string name="subject">Subject</string>
    <string name="from">From:</string>
    <string name="sender_example">sender@example.com</string>
    <string name="content">Content:</string>
    <string name="content_example">This is the full content of the email</string>
    <string name="to">To:</string>
    <string name="labels">Labels</string>
    <string name="add_label">Add Label</string>
    <string name="label_name">Add Label name</string>
    <string name="error_empty_name">Missing/Invalid Label Name</string>
    <string name="error_duplicate_name">The label name you selected already exists. Try a different name</string>
    <string name="edit_label">Edit Label</string>
    <string name="label_name_">Label Name</string>
    <string name="delete_label">Delete Label</string>
    <string name="trash">Trash</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="send_email">Send email</string>
</resources>

