<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_mail"
            android:title="@string/inbox" />
        <item
            android:id="@+id/nav_star"
            android:icon="@drawable/ic_star"
            android:title="@string/starred" />
        <item
            android:id="@+id/nav_important"
            android:icon="@drawable/ic_important"
            android:title="@string/important" />
        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_sent"
            android:title="@string/sent" />
        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/ic_draft"
            android:title="@string/draft" />
        <item
            android:id="@+id/nav_spam"
            android:icon="@drawable/ic_spam"
            android:title="@string/spam" />
        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash"
            android:title="@string/trash" />
        <item
            android:id="@+id/nav_labels_anchor"
            android:icon="@drawable/ic_label"
            android:title="@string/labels"
            android:enabled="false"
            />
        <item
            android:id="@+id/nav_add_label"
            android:title="@string/add_label"
            android:icon="@drawable/ic_add" />
    </group>
</menu>