<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:contentDescription="@string/logo_desc"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signupTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:text="@string/signupTitle"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/blue_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:autofillHints="givenName"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toStartOf="@id/lastName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signupTitle"
        app:layout_constraintHorizontal_chainStyle="spread"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:padding="12dp"
        android:textSize="16sp"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:autofillHints="givenName"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signupTitle"
        app:layout_constraintStart_toEndOf="@id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/birthDateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/birthDate"
        android:textSize="18sp"
        android:textColor="@color/blue_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/birthDateSpinner"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="25dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstName" />

    <TextView
        android:id="@+id/genderLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genderLabel"
        android:textColor="@color/blue_title"
        android:layout_marginTop="140dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthDateTitle" />

    <RadioGroup
        android:id="@+id/genderGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/genderLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_female"
            android:buttonTint="@color/orange"/>

        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_male"
            android:buttonTint="@color/orange"/>
        <RadioButton
            android:id="@+id/radio_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_other"
            android:buttonTint="@color/orange"/>
    </RadioGroup>

    <EditText
        android:id="@+id/username"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/genderGroup"
        android:autofillHints="username"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:textColorHint="@color/black"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/uploadProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_title"
        android:text="@string/uploadProfileImage"
        app:layout_constraintTop_toBottomOf="@id/confirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:backgroundTint="@color/blue_primary"
            android:text="@string/signupBtn"
            android:textColor="@android:color/white"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadProfileImage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>