<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:paddingEnd="8dp"
    android:paddingStart="16dp"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/labelIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_label"
        android:contentDescription="@string/label"
        app:tint="@color/mail_date"
        />

    <TextView
        android:id="@+id/labelNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/label_name_"
        android:textSize="16sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textColor="@color/black"
        />

    <ImageButton
        android:id="@+id/editLabelButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_edit_label"
        android:contentDescription="@string/edit_label"
        app:tint="@color/mail_title"
        />

    <ImageButton
        android:id="@+id/deleteLabelButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_delete_label"
        android:contentDescription="@string/delete_label"
        app:tint="@color/mail_title"
        />

</LinearLayout>
